# rx-llm-proc

./: .env  .gitignore  GEMINI.md  README.md  import_checker.py  pre_commit.sh  pyproject.toml  requirements.txt  run_mail_pipeline.sh  view_docs.sh
docs/: GoalAndMotivation.md  TODO.md
docs/cli/: Caching.md  CalendarCLI.md  CollaborationMCP.md  CommandLineCredentialsManagement.md  CommandLineExamples.md  CommandLineTools.md  ConversionCLI.md  DocsCLI.md  GdriveCLI.md  GmailCLI.md  LlmCLI.md  MailCategorizerCLI.md  SheetsCLI.md  SmtMCP.md  TasksCLI.md  TemplateCLI.md
docs/design/: ApiIntegrationDesign.md  CachingDesign.md  CollaborationMCP.md  CommandLineToolDesign.md  CredentialStoreDesign.md  DocsUpdaterDesign.md  LlmUpdaterDesign.md  MailCategorizerDesign.md  Overview.md  PluginDesign.md  RxOperatorApproach.md  SmtMCP.md
examples/docs_self_checker/: GNUmakefile  build_deps.sh
examples/docs_self_checker/templates/: build_suggestions.prompt.j2
gemini/extensions/collaboration-hub/: GEMINI.md  gemini-extension.json
gemini/extensions/smt-reasoner/: GEMINI.md  gemini-extension.json
gemini/skills/document-architect/: SKILL.md
gemini/skills/knowledge-synthesizer/: SKILL.md
gemini/skills/workspace-orchestrator/: SKILL.md
rxllmproc/app/: environment.py
rxllmproc/app/analysis/: pipelines.py  types.py
rxllmproc/app/docs/: pipelines.py  processing.py  types.py
rxllmproc/app/mail/: __init__.py  categorizer.py  index.py  pipelines.py  processing.py  types.py
rxllmproc/calendar/: __init__.py  _interface.py  api.py  operators.py  types.py
rxllmproc/cli/: calendar_cli.py  cli_base.py  collaboration_mcp.py  conversion_cli.py  docs_cli.py  gdrive_cli.py  gmail_cli.py  llm_cli.py  mail_categorizer.py  mail_categorizer_cli.py  mcp_base.py  rx_mail_categorizer.py  sheets_cli.py  smt_mcp.py  tasks_cli.py  template_cli.py
rxllmproc/core/: api_base.py  auth.py  environment.py
rxllmproc/database/: __init__.py  api.py  operators.py
rxllmproc/docs/: __init__.py  _interface.py  api.py  docs_model.py  docs_text.py  llm_updater.py  markdown_to_gdocs.py  markdownit_indent.py  operators.py  section.py  types.py
rxllmproc/drive/: __init__.py  _interface.py  api.py  types.py
rxllmproc/gmail/: __init__.py  _interface.py  api.py  operators.py  types.py
rxllmproc/llm/: api.py  commons.py  operators.py
rxllmproc/plugins/: loader.py
rxllmproc/sheets/: __init__.py  _interface.py  api.py  types.py
rxllmproc/smt/: __init__.py  auditor.py  compiler.py  session.py
rxllmproc/tasks/: _tasks_interface.py  api.py  operators.py  types.py
rxllmproc/text_processing/: __init__.py  converters.py  email_processing.py  html_processing.py  jinja_processing.py  operators.py
tests/: sample_doc.py  sample_doc2.py  test_support.py
typings/: nest_asyncio.pyi  oauth2client.pyi
typings/z3/: __init__.pyi
(+74 files in other folders)
